--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@
 table {
   border-collapse: collapse;
   width: 100%;
+  background-color: #f2f2f2;
 }
 
 th, td {
@@ -12,17 +13,6 @@ th, td {
 
 th {
   background-color: #f2f2f2;
-}
-
-.win {
-  background-color: #c8e6c9; /* Green background for wins */
-}
-
-.loss {
-  background-color: #ffcdd2; /* Red background for losses */
-}
-.light-grey {
-background-color: #f2f2f2; /* Light grey background color */
 }
 
 .win-row {
