--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,7 @@ body{
 .title{
   margin:0 auto;
   padding:0 auto;
-  width:100%;
+  width: 30%;
   font-size: 30px;
   color: #fff;
   text-transform: uppercase;
@@ -25,6 +25,7 @@ body{
   text-align: center;
   background-color:#103660;
   border-bottom: 3px solid #00e192;
+  border-radius: 30px 30px 0px 0px;
 }
 .tbl-content{
  
@@ -32,11 +33,10 @@ body{
 
 }
 table {
-  
+  border-radius: 30px;
   overflow: hidden;
   background-color: #103660;
-  table-layout: fixed;    
-  width:100%;
+ 
   border-spacing:0;
 }
 
