--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,65 +1,70 @@
 /* Add this in styles.css */
 
 @import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
-body{
- font-family: 'Play', sans-serif;
+
+body {
+  font-family: 'Play', sans-serif;
 
 }
+
 .content {
-     display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
 }
-  
 
-.title{
-  margin:0 auto;
-  padding:0 auto;
+
+.title {
+  margin: 0 auto;
+  padding: 0 auto;
   width: 30%;
   font-size: 30px;
   color: #fff;
   text-transform: uppercase;
   font-weight: 300;
   text-align: center;
-  background-color:#103660;
+  background-color: #103660;
   border-bottom: 3px solid #00e192;
   border-radius: 30px 30px 0px 0px;
 }
-.tbl-content{
- 
+
+.tbl-content {
+
   margin-top: 0px;
 
 }
+
 table {
   border-radius: 30px;
   overflow: hidden;
   background-color: #103660;
- 
-  border-spacing:0;
+
+  border-spacing: 0;
 }
 
-th, td {
+th,
+td {
   border: 1px solid #305d91;
   padding: 0.25em 0.5em;
   text-align: left;
   vertical-align: top;
   padding: 15px;
   text-align: left;
-  vertical-align:middle;
+  vertical-align: middle;
   color: #606060;
-    font-size: 1.2rem;
-    font-weight: bold;
-    line-height: 1.2;
+  font-size: 1.2rem;
+  font-weight: bold;
+  line-height: 1.2;
   text-transform: uppercase;
 }
 
 th {
   padding: 20px 15px;
   text-align: left;
-     font-size: 1.4rem;
-    font-weight: 700;
+  font-size: 1.4rem;
+  font-weight: 700;
   color: #fff;
   text-transform: uppercase;
   background-color: #103660;
@@ -70,14 +75,23 @@ tr {
   transition: all 1s ease-in-out;
 }
 
+
 tr.slide-out {
-  transform: translateX(100%);
+  position: relative;
+  left: 100%;
+
+}
+
+tr.slide-in {
+  transform: translateX(-100%);
 }
 
 .win-row {
-  background-color: #27ae60; /* Green background for wins */
+  background-color: #27ae60;
+  /* Green background for wins */
 }
 
 .loss-row {
-  background-color: #e74c3c; /* Red background for losses */
+  background-color: #e74c3c;
+  /* Red background for losses */
 }
