--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ body {
 .title {
   margin: 0 auto;
   padding: 0 auto;
-  width: 30%;
+width: 12rem;
   font-size: 30px;
   color: #fff;
   text-transform: uppercase;
