--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,32 @@
 /* Add this in styles.css */
 
 @import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
+.scrollable-tbody::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+.scrollable-tbody {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  display: block;
+  max-height: 500px; /* Adjust based on your needs */
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.table-wrapper{
+  display: flex;
+    justify-content: center;
+}
 
+thead, tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed; /* This ensures that the columns stay aligned */
+}
+tbody {
+  display: block;
+  width: 100%;
+  overflow: auto;
+}
 body {
   font-family: 'Play', sans-serif;
 
@@ -40,7 +65,7 @@ table {
   width: 50%; /* Specify a width for the table */
   table-layout: fixed; /* Use fixed layout for the table */
   border-radius: 30px;
-  overflow: hidden;
+
   background-color: #103660;
  border-spacing: 0;
   border-collapse: collapse; /* Add this to ensure that the border spacing doesn't affect the layout */
@@ -56,9 +81,9 @@ td {
   text-align: left;
   vertical-align: middle;
   color: #606060;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   font-weight: bold;
-  line-height: 1.2;
+  line-height: 1;
   text-transform: uppercase;
 
   
@@ -67,7 +92,7 @@ td {
 th {
   padding: 20px 15px;
   text-align: left;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 700;
   color: #fff;
   text-transform: uppercase;
